--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -29,8 +29,12 @@
   "devDependencies": {
     "@angular/compiler-cli": "~4.2.0",
     "@ngtools/webpack": "~1.6.0",
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
     "copy-webpack-plugin": "~4.0.1",
     "extract-text-webpack-plugin": "~3.0.0",
+    "lazy": "1.0.11",
     "nativescript-css-loader": "~0.26.0",
     "nativescript-dev-typescript": "~0.5.0",
     "nativescript-dev-webpack": "^0.8.0",
@@ -43,7 +47,6 @@
     "webpack-sources": "~1.0.1"
   },
   "scripts": {
-    "reinstall": "tns plugin remove nativescript-plugin-google-places && tns platform remove ios && tns plugin add ../src && tns run ios",
     "ns-bundle": "ns-bundle",
     "start-android-bundle": "npm run ns-bundle --android --run-app",
     "start-ios-bundle": "npm run ns-bundle --ios --run-app",
