--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-plugin-google-places",
-  "version": "1.0.1",
+  "version": "1.1.2",
   "description": "Choose a place using Google Place Picker",
   "main": "plugin-google-places",
   "typings": "index.d.ts",
@@ -24,7 +24,7 @@
     "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
     "build-scripts": "npm install --ignore-scripts && webpack --config scripts/webpack.config.js scripts/installer.js scripts/postinstall.js",
     "postinstall": "node scripts/postinstall.js",
-    "configure": "rimraf ../../google-places.nativescript.json && npm run postinstall"
+    "configure": "rimraf ../../google-places.config.json && npm run postinstall"
   },
   "keywords": [
     "NativeScript",
@@ -50,6 +50,7 @@
   "devDependencies": {
     "fs-extra": "^4.0.2",
     "fs-promise": "^2.0.3",
+    "ncp": "^2.0.0",
     "prompt-lite": "^0.1.1",
     "tns-core-modules": "^3.1.0",
     "tns-platform-declarations": "^3.1.0",
