--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-plugin-google-places",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Choose a place using Google Place Picker",
   "main": "plugin-google-places",
   "typings": "index.d.ts",
@@ -22,9 +22,9 @@
     "plugin.prepare": "npm run tsc && cd ../demo-ng && tns plugin remove nativescript-plugin-google-places && tns plugin add ../src",
     "clean": "cd ../demo-ng && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
     "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
-    "build-scripts": "npm install --ignore-scripts && webpack --config scripts/webpack.config.js scripts/installer.js scripts/postinstall.js",
+    "build-scripts": "npm install --ignore-scripts && webpack --config scripts/webpack.config.js scripts/installer.js scripts/postinstall.js && webpack --config scripts/webpack.config.js scripts/resetter.js scripts/reset.js",
     "postinstall": "node scripts/postinstall.js",
-    "configure": "rimraf ../../google-places.config.json && npm run postinstall"
+    "configure": "node scripts/reset.js && npm run postinstall"
   },
   "keywords": [
     "NativeScript",
@@ -56,10 +56,8 @@
     "tns-platform-declarations": "^3.1.0",
     "tslint": "^5.0.0",
     "typescript": "~2.3.0",
-    "webpack": "^3.6.0"
-  },
-  "dependencies": {
-    "rimraf": "^2.5.0"
+    "webpack": "^3.6.0",
+    "rimraf": "^2.5.0"    
   },
   "repository": {
     "type": "git",
